--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "outDir": "./lib/cjs",
+    "declaration": true,
+    "typeRoots": [
+      "index.d.ts",
+      "node_modules/@types"
+    ],
     "lib": [
       "dom",
       "dom.iterable",
@@ -13,7 +19,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -21,6 +27,9 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src/components"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
